--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/contentSpacing"
+        style="@style/ContentSpacing"
         tools:context=".views.SettingsActivity">
 
         <!-- Title Section -->
