--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:app="http://schemas.android.com/apk/res-auto">
     <style name="Theme.Mdp_cw3" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
@@ -15,27 +15,31 @@
     </style>
 
     <!-- Spacing for root content -->
-    <style name="contentSpacing">
+    <style name="ContentSpacing">
         <item name="android:layout_margin">16dp</item>
     </style>
 
     <!-- TextView Headings -->
     <style name="Heading1">
-        <item name="android:textSize">24sp</item>
+        <item name="android:textSize">32sp</item>
         <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <style name="Heading2">
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <style name="Heading3">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <!-- TextView Normal Text -->
     <style name="TextViewText">
-        <item name="android:textSize">14sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <!-- TextView Normal Text -->
